--- a/src/app/components/modais-empresas/modais-empresa.component.html
+++ b/src/app/components/modais-empresas/modais-empresa.component.html
@@ -152,7 +152,7 @@
           </select>
         </div>
       </div>
-       <!--
+       
       <div style="margin-top: 10px;" class="row">
         <div class="col">
           <label>Faturamento R$</label>
@@ -170,23 +170,26 @@
             class="form-control" placeholder=""></textarea>
         </div>
       </div>
-    </div>
-     -->
 
       <div style="margin-top: 10px;" class="row">
         <div class="col">
           <label>
-            Enviar e-mail para o cliente ao marcar DCTF-WEB
-         </label>
-         <p-toggleButton onLabel="Enviar email" offLabel="Não enviar email" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{'width': '10em'}"></p-toggleButton>
+            Enviar e-mail ao marcar DCTF-WEB
+          </label>
+          <br>
+          <p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}"
+            name="enviar_email_cliente" value="enviar_email_cliente"
+            [(ngModel)]="competenciaModal.enviar_email_cliente"></p-checkbox>
         </div>
 
         <div class="col">
           <label>
             Empresa com RH Externo
-         </label>
-         <br>
-         <p-toggleButton  onLabel="Sim" offLabel="Não" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{'width': '10em'}"></p-toggleButton>
+          </label>
+          <br>
+          <p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}"
+            name="esocial_rh_interno" value="esocial_rh_interno"
+            [(ngModel)]="competenciaModal.esocial_rh_interno"></p-checkbox>
         </div>
       </div>
 
