--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="cardInner">
   <div [style.grid-area]="'header'">
     <div class="d-flex justify-content-center barra_cg">
-      <h4 class="text-center">DCTFWEB</h4>
+      <h4 class="text-center">Teste app</h4>
     </div>
   </div>
   <div [style.grid-area]="'content'">
